# Proyecto2_Datos2

./: AlgoritmosGeneticos.cpp  AlgoritmosGeneticos.h  Backtracking.cpp  Backtracking.h  CMakeLists.txt  Cursos.cpp  Cursos.h  Estudiantes.cpp  Estudiantes.h  Individual.cpp  Individual.h  Juego.cpp  Juego.h  List_Posiciones.cpp  List_Posiciones.h  ListaBalas.cpp  ListaBalas.h  ListaCursos.cpp  ListaCursos.h  ListaEstudiantes.cpp  ListaEstudiantes.h  Matriz.cpp  Matriz.h  Pathfinding.cpp  Pathfinding.h  Tablero.cpp  Tablero.h  main.cpp
html/: AlgoritmosGeneticos_8h.html  AlgoritmosGeneticos_8h__dep__incl.dot  AlgoritmosGeneticos_8h__dep__incl.md5  AlgoritmosGeneticos_8h__incl.dot  AlgoritmosGeneticos_8h__incl.md5  AlgoritmosGeneticos_8h_source.html  Backtracking_8h.html  Backtracking_8h__incl.dot  Backtracking_8h__incl.md5  Backtracking_8h_source.html  Cursos_8h.html  Cursos_8h__dep__incl.dot  Cursos_8h__dep__incl.md5  Cursos_8h__incl.dot  Cursos_8h__incl.md5  Cursos_8h_source.html  Estudiantes_8h.html  Estudiantes_8h__dep__incl.dot  Estudiantes_8h__dep__incl.md5  Estudiantes_8h__incl.dot  Estudiantes_8h__incl.md5  Estudiantes_8h_source.html  Individual_8h_source.html  Juego_8h_source.html  List__Posiciones_8h.html  List__Posiciones_8h__dep__incl.dot  List__Posiciones_8h__dep__incl.md5  List__Posiciones_8h__incl.dot  List__Posiciones_8h__incl.md5  List__Posiciones_8h_source.html  ListaBalas_8h.html  ListaBalas_8h__incl.dot  ListaBalas_8h__incl.md5  ListaBalas_8h_source.html  ListaCursos_8h.html  ListaCursos_8h__incl.dot  ListaCursos_8h__incl.md5  ListaCursos_8h_source.html  (+61 more)
(+106 files in other folders)
