cmake_minimum_required(VERSION 3.14)
project(Proyecto2_Datos2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proyecto2_Datos2 main.cpp Estudiantes.cpp Estudiantes.h Cursos.cpp Cursos.h Tablero.cpp Tablero.h Backtracking.cpp Backtracking.h Pathfinding.cpp Pathfinding.h AlgoritmosGeneticos.cpp AlgoritmosGeneticos.h Juego.cpp Juego.h)